welcome.lessons.welcome.array.array123.Array123.scala.error
array123:3: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    if(nums(i)==1 || nums(i)==2 || nums(i)==3 ||){return true }
                                              ^